# ld50

./: README.md  index.html  ld50.data  ld50.js  ld50.wasm  meson.build
res/: font-tiny.cfg  font.cfg  notes.txt  resources.json
src/: main.cpp  resources.cpp  resources.hpp  scene.hpp  sound.hpp  sprite.hpp  text.cpp  text.hpp  window.cpp  window.hpp
src/gl/: buffer.hpp  mesh.hpp
